# ffmpeg-cpp

./: .gitignore
source/ffmpeg-cpp/ffmpeg-cpp/: AudioFormatConverter.h  CMakeLists.txt  CodecDeducer.h  ConvertedAudioProcessor.h  FFmpegConfig.h.in  FFmpegException.h  FrameContainer.h  OpenCodec.h  VideoFormatConverter.h  ffmpeg.h  ffmpegcpp.h  std.h
source/ffmpeg-cpp/ffmpeg-cpp/Codecs/: AudioCodec.h  Codec.h  H264NVEncCodec.h  H265NVEncCodec.h  JPGCodec.h  PNGCodec.h  VP9Codec.h  VideoCodec.h
source/ffmpeg-cpp/ffmpeg-cpp/Demuxing/: AudioInputStream.h  InputStream.h  StreamData.h  VideoInputStream.h
source/ffmpeg-cpp/ffmpeg-cpp/Frame Sinks/: AudioEncoder.h  AudioFilter.h  Filter.h  OneInputFrameSink.h  VideoFrameSink.h
source/ffmpeg-cpp/ffmpeg-cpp/Frame_Sinks/: AudioFrameSink.h  FrameSink.h  FrameSinkStream.h  FrameWriter.h  VideoEncoder.h  VideoFilterInput.h
source/ffmpeg-cpp/ffmpeg-cpp/Info/: AudioStreamInfo.h  ContainerInfo.h  VideoStreamInfo.h
source/ffmpeg-cpp/ffmpeg-cpp/Muxing/: AudioOutputStream.h  Muxer.h  OutputStream.h  VideoOutputStream.h
source/ffmpeg-cpp/ffmpeg-cpp/Sources/: Demuxer.h  EncodedFileSource.h  InputSource.h  RawAudioDataSource.h  RawAudioFileSource.h  RawVideoDataSource.h  RawVideoFileSource.h
